stylesheet.css
body {
  min-height: 75rem; /* Can be removed; just added for demo purposes */
}

.navbar {
  width: 58rem;
}

.jumbotron {
  padding-top: 6rem;
  /* padding-bottom: 6rem; */
  margin-bottom: 0;
  background-color: #fff;
}

.jumbotron p:last-child {
  margin-bottom: 0;
}

.jumbotron-heading {
  font-weight: 300;
  font-size: 60px;
}

.jumbotron .container {
  max-width: 40rem;
}

footer {
  padding-top: 3rem;
  padding-bottom: 3rem;
}

footer p {
  margin-bottom: .25rem;
}

/* .btn-squared-default-plain {
  width: 100px !important;
  height: 100px !important;
  font-size: 20px;
  margin-right: 100px;
  margin-left: 100px;
}
.btn-squared-default-plain:hover {
  background-color: grey;
  color: white;
} */

.btn-light {
  width: 200px;
  height: 200px;
  font-size: 20px;
  border-radius: 25px;
  margin-right: 15px;
  margin-left: 15px;
  background-color: #d8d8d8;
}

.btn-light:hover {
  background-color: #551A99;
  color: white;
}

.container-fluid {
  padding-top: 3rem;
  padding-bottom: 3rem;
  width: 1000px;
}

.scrollable-menu {
  height: auto;
  max-height: 200px;
  overflow-x: hidden;
}

.container {
  padding-top: 1rem;
  /* padding-bottom: 3rem; */
  max-width: 63rem;
}

.custom-select {
  width: 200px;
  border-radius: 25px;
}

.form-control {
  border-radius: 25px;
}

ul {
  list-style-type: none;
}

* {
  box-sizing: border-box;
}

/* ul {
  list-style-type: none;
} */

body {
  font-family: Verdana, sans-serif;
}

.month {
  padding: 70px 25px;
  width: 100%;
  background: #551A99;
  text-align: center;
  padding-top: 2rem;
  padding-bottom: 2rem;
}

.month ul {
  margin: 0;
  padding: 0;
}

.month ul li {
  color: white;
  font-size: 20px;
  text-transform: uppercase;
  letter-spacing: 3px;
}

.month .prev {
  float: left;
  padding-top: 10px;
}

.month .next {
  float: right;
  padding-top: 10px;
}

.weekdays {
  margin: 0;
  padding: 10px 0;
  background-color: #ddd;
}

.weekdays li {
  display: inline-block;
  width: 13.6%;
  color: #666;
  text-align: center;
}

.days {
  padding: 10px 0;
  background: #eee;
  margin: 0;
}

.days li {
  list-style-type: none;
  display: inline-block;
  width: 13.6%;
  /* text-align: center; */
  margin-bottom: 5px;
  font-size:18px;
  color: #777;
}

.days li .active {
  padding: 5px;
  background: #551A99;
  color: white !important
}

/* Add media queries for smaller screens */
@media screen and (max-width:720px) {
  .weekdays li, .days li {width: 13.1%;}
}

@media screen and (max-width: 420px) {
  .weekdays li, .days li {width: 12.5%;}
  .days li .active {padding: 2px;}
}

@media screen and (max-width: 290px) {
  .weekdays li, .days li {width: 12.2%;}
}

